public class FdService {
    public void getFdServiceDetails(String accountNo) {
        System.out.println("Fetching Fixed Deposit details for account: " + accountNo);
    }
}
