public class LoanService {
    public void getLoanDetails(String accountNo) {
        System.out.println("Fetching Loan details for account: " + accountNo);
    }
}
