public class AccountService {
    public void getAccountDetails(String accountNo) {
        System.out.println("Fetching Account details for account: " + accountNo);
    }
}
